fixing menu under scrollbar issue in index.css; .open width correction in features.html

--- a/public/src/index.css
+++ b/public/src/index.css
@@ -8,7 +8,7 @@
     font-style: normal;
 }
 
-main{
+main, #menu{
     scrollbar-width: thin !important;
 }
 
@@ -97,7 +97,9 @@ header a, h1 {
     border-radius: 5px;
     flex-direction: column;
     gap: 10px;
-    box-shadow: 0px 0px 5px black
+    box-shadow: 0px 0px 5px black;
+    max-height: calc(100% - 60px);
+    overflow-y: auto;
 }
 .menu-item{
     display: flex;
